--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,18 @@
     android:id="@+id/container"
     android:layout_height="match_parent">
 
-
+<include
+    android:id="@+id/toolbar"
+    layout="@layout/tool_bar"
+    />
+       <TextView
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:text="New Text"
+           android:id="@+id/textView2"
+           android:layout_alignParentTop="true"
+           android:layout_alignParentStart="true"
+           android:layout_marginTop="84dp" />
    </RelativeLayout>
 
     <ListView
