--- a/app/src/main/res/layout/fragment_points_page.xml
+++ b/app/src/main/res/layout/fragment_points_page.xml
@@ -4,10 +4,7 @@
     android:id="@+id/containerFitnessP"
     android:background="#212121">
 
-    <include
-        android:id="@+id/toolbar"
-        layout="@layout/tool_bar"
-        />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -17,7 +14,7 @@
         android:background="#212121"
         android:autoText="true"
         android:textColor="#e89633"
-        android:layout_below="@+id/toolbar"
+        android:layout_below="@+id/points"
         android:layout_alignStart="@+id/listView4" />
 
         <ListView
