--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -40,7 +40,7 @@
             android:layout_height="wrap_content"
             android:text="Set Weight"
             android:id="@+id/setWeight"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_below="@+id/editnametext"
             android:layout_alignStart="@+id/setWeightG"
             android:layout_marginBottom="10dp"
@@ -50,7 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentWeightGoal"
-        android:textColor="#e89633"
+        android:textColor="#e70b0e"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:paddingTop="30dp"
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:text="Set Weight"
             android:id="@+id/setWeightG"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_below="@+id/currentWeightGainGoal"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentWeightGainGoal"
-        android:textColor="#e89633"
+        android:textColor="#e70b0e"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/weightGain"
@@ -112,7 +112,7 @@
             android:layout_height="wrap_content"
             android:text="Set Bench"
             android:id="@+id/setBench"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_below="@+id/BenchText"
             android:layout_alignStart="@+id/setWeightG"
             android:layout_marginBottom="10dp"
@@ -122,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentBenchGoal"
-        android:textColor="#e89633"
+        android:textColor="#e70b0e"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/BenchText"
@@ -148,7 +148,7 @@
             android:layout_height="wrap_content"
             android:text="Set Squat"
             android:id="@+id/setSquat"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_below="@+id/currentSquatGoal"
             android:layout_alignStart="@+id/setBench"
             android:layout_marginBottom="10dp"
@@ -158,7 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentSquatGoal"
-        android:textColor="#e89633"
+        android:textColor="#e70b0e"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/SquatText"
@@ -185,7 +185,7 @@
             android:layout_height="wrap_content"
             android:text="Set DeadLift"
             android:id="@+id/setDeadLift"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_centerVertical="true"
             android:layout_below="@+id/DeadLiftText"
 
@@ -197,7 +197,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/DeadLiftGoal"
-        android:textColor="#e89633"
+        android:textColor="#e70b0e"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/DeadLiftText"
@@ -223,7 +223,7 @@
             android:layout_height="wrap_content"
             android:text="Set MileTime"
             android:id="@+id/setMileTime"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_below="@+id/MileTimeText"
             android:layout_alignStart="@+id/setDeadLift"
             android:layout_marginBottom="10dp"
@@ -234,7 +234,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/currentMileTimeGoal"
-        android:textColor="#e89633"
+        android:textColor="#e70b0e"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/MileTimeText"
