--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="edu.sc.FitLivin.MainActivity">
 
     <item
@@ -14,13 +13,13 @@
         android:id="@+id/uName"
         android:title=""
         android:orderInCategory="2"
-        app:showAsAction="always|withText"
+        android:showAsAction="always|withText"
         />
     <item
         android:id="@+id/home"
         android:title="home"
         android:orderInCategory="1"
         android:icon="@mipmap/ic_launcher"
-        app:showAsAction="always"
+        android:showAsAction="always"
         />
 </menu>
