--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="AppTheme" parent="Theme.AppCompat.Light">
-        <item name="android:actionBarStyle">@style/MyActionBarTheme</item>
-    </style>
-    <style name="MyActionBarTheme" parent="Theme.AppCompat.Light">
-        <item name="android:background">#e89633</item>
+    <style name="AppTheme" parent="android:Theme.Material.Light.DarkActionBar">
     </style>
 </resources>
+
