--- a/app/src/main/res/layout/fragment_editprofile.xml
+++ b/app/src/main/res/layout/fragment_editprofile.xml
@@ -15,7 +15,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:text="EDIT PROFILE"
-            android:textColor="#e89633"
+            android:textColor="#ffffff"
             android:layout_marginTop="50dp"
             android:textSize="50dp"
             android:layout_height="wrap_content"
@@ -29,12 +29,12 @@
             android:inputType="textPersonName"
             android:id="@+id/editTextname"
             android:textSize="25dp"
-            android:textColor="#e89633"
+            android:textColor="#ffffff"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:hint="Enter new name"
-            android:textColorHint="#e89633"
+            android:textColorHint="#ffffff"
             android:background="#010101"
             android:layout_above="@+id/reditpassword"
             />
@@ -48,12 +48,12 @@
             android:inputType="textVisiblePassword"
             android:id="@+id/reditpassword"
             android:textSize="25dp"
-            android:textColor="#e89633"
+            android:textColor="#ffffff"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
             android:hint="Enter new password"
-            android:textColorHint="#e89633"
+            android:textColorHint="#ffffff"
             android:background="#010101"
             android:layout_above="@+id/editpasstext"
             />
@@ -66,12 +66,12 @@
             android:maxLength="10"
             android:hint="Enter password again"
             android:textSize="25dp"
-            android:textColor="#e89633"
+            android:textColor="#ffffff"
             android:inputType="textVisiblePassword"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="50dp"
-            android:textColorHint="#e89633"
+            android:textColorHint="#ffffff"
             android:background="#010101"
             android:id="@+id/editpasstext"
             android:layout_centerVertical="true"
@@ -85,9 +85,9 @@
             android:maxLength="10"
             android:hint="Enter your phone"
             android:textSize="25dp"
-            android:textColor="#e89633"
+            android:textColor="#ffffff"
             android:inputType="phone"
-            android:textColorHint="#e89633"
+            android:textColorHint="#ffffff"
             android:background="#010101"
             android:layout_marginBottom="10dp"
             android:layout_marginLeft="50dp"
