--- a/app/src/main/res/layout/fragment_weightloss_day_four.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_four.xml
@@ -117,7 +117,7 @@
                 android:id="@+id/completeDay4w"
                 android:layout_below = "@+id/cardioDetail"
                 android:layout_gravity="right|bottom"
-                android:background="#e89633"
+                android:background="#e70b0e"
                 />
 
 
