--- a/app/src/main/res/layout/fragment_body_building_day_three.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_three.xml
@@ -133,7 +133,8 @@
         android:id="@+id/completeDay3bb"
         android:layout_below = "@+id/closegripPushupDetail"
         android:layout_gravity="right|bottom"
-        android:background="#e89633"/>
+        android:background="#e70b0e"
+        />
 
     </LinearLayout>>
 
