--- a/app/src/main/res/layout/fragment_body_building_two.xml
+++ b/app/src/main/res/layout/fragment_body_building_two.xml
@@ -131,7 +131,7 @@
         android:text="Workout Complete!"
         android:id="@+id/completeDay2bb"
         android:layout_below = "@+id/pushupDetail"
-        android:background="#e89633"
+        android:background="#e70b0e"
         android:layout_gravity="right|bottom" />
 
 </LinearLayout>>
