--- a/app/src/main/res/layout/fragment_fp__wgt__loss.xml
+++ b/app/src/main/res/layout/fragment_fp__wgt__loss.xml
@@ -64,7 +64,7 @@
         android:text="How To"
         android:id="@+id/howTo"
         android:layout_gravity="center_horizontal|bottom"
-        android:background="#e89633" />
+        android:background="#e70b0e" />
 
 
 </FrameLayout>
