--- a/app/src/main/res/layout/fragment_max.xml
+++ b/app/src/main/res/layout/fragment_max.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:text="Set Bench"
             android:id="@+id/setBench"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_below="@+id/benchText"
             android:layout_marginBottom="10dp"
             android:layout_centerHorizontal="true"
@@ -54,7 +54,7 @@
             android:layout_height="wrap_content"
             android:id="@+id/userBench"
             android:layout_gravity="right|top"
-            android:textColor="#e89633"
+            android:textColor="#e70b0e"
             android:textSize="20dp"
             android:layout_toEndOf="@+id/benchText"
             android:layout_marginTop="10dp"
@@ -80,7 +80,7 @@
             android:layout_height="wrap_content"
             android:text="Set Squat"
             android:id="@+id/setSquat"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_below="@+id/squatText"
             android:layout_marginBottom="10dp"
             android:layout_alignStart="@+id/setBench"
@@ -92,7 +92,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/userSquat"
         android:layout_gravity="right|top"
-        android:textColor="#e89633"
+        android:textColor="#e70b0e"
         android:textSize="20dp"
         android:layout_toEndOf="@+id/squatText"
         android:layout_below="@+id/setBench"
@@ -120,7 +120,7 @@
             android:layout_height="wrap_content"
             android:text="Set DeadLift"
             android:id="@+id/setDeadLift"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_below="@+id/deadliftText"
             android:layout_alignStart="@+id/setBench"
             android:layout_marginBottom="10dp"
@@ -132,7 +132,7 @@
         android:id="@+id/userDeadlift"
         android:layout_gravity="right|center_vertical"
         android:textSize="20dp"
-        android:textColor="#e89633"
+        android:textColor="#e70b0e"
         android:layout_toEndOf="@+id/deadliftText"
         android:layout_below="@+id/setSquat"
 
@@ -161,7 +161,7 @@
             android:layout_height="wrap_content"
             android:text="Set MileTime"
             android:id="@+id/setMileTime"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_below="@+id/mileText"
             android:layout_alignStart="@+id/setBench" />
 
@@ -170,7 +170,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/userTime"
         android:layout_gravity="right|top"
-        android:textColor="#e89633"
+        android:textColor="#e70b0e"
         android:textSize="20dp"
         android:textIsSelectable="true"
         android:layout_toEndOf="@+id/mileText"
