--- a/app/src/main/res/layout/fragment_nutrition_cal.xml
+++ b/app/src/main/res/layout/fragment_nutrition_cal.xml
@@ -19,7 +19,7 @@
             android:id="@+id/maintainButton"
             android:layout_marginTop="20dp"
             android:layout_centerHorizontal="true"
-            android:background="#e89633"
+            android:background="#e70b0e"
             />
         <TextView
             android:layout_width="5dp"
@@ -36,7 +36,7 @@
             android:text="Weight Loss"
             android:id="@+id/wlossButton"
             android:textColor="#000100"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_above="@+id/lowText"
             android:layout_toLeftOf="@+id/view1"
             />
@@ -55,7 +55,7 @@
             android:layout_height="55dp"
             android:text="Weight Gain"
             android:id="@+id/wGainButton"
-            android:background="#e89633"
+            android:background="#e70b0e"
             android:layout_above="@+id/lowText"
             android:layout_toRightOf="@+id/view2"
             android:allowUndo="false" />
