--- a/app/src/main/res/layout/fragment_strength_day_two.xml
+++ b/app/src/main/res/layout/fragment_strength_day_two.xml
@@ -119,7 +119,7 @@
                 android:text="Workout Complete!"
                 android:id="@+id/completeDay2s"
                 android:layout_gravity="right|bottom"
-                android:background="#e89633"
+                android:background="#e70b0e"
                 />
 
 
