--- a/app/src/main/res/layout/fragment_weightloss_day_three.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_three.xml
@@ -117,7 +117,7 @@
                 android:id="@+id/completeDay3w"
                 android:layout_below = "@+id/burpeesDetail"
                 android:layout_gravity="right|bottom"
-                android:background="#e89633"
+                android:background="#e70b0e"
                 />
 
 
