--- a/app/src/main/res/layout/fragment_nutrition_cal.xml
+++ b/app/src/main/res/layout/fragment_nutrition_cal.xml
@@ -18,6 +18,7 @@
             android:text="Maintain"
             android:id="@+id/maintainButton"
             android:layout_marginTop="20dp"
+            android:textColor="#ffffff"
             android:layout_centerHorizontal="true"
             android:background="#e70b0e"
             />
@@ -35,7 +36,7 @@
             android:layout_height="55dp"
             android:text="Weight Loss"
             android:id="@+id/wlossButton"
-            android:textColor="#000100"
+            android:textColor="#ffffff"
             android:background="#e70b0e"
             android:layout_above="@+id/lowText"
             android:layout_toLeftOf="@+id/view1"
@@ -56,6 +57,7 @@
             android:text="Weight Gain"
             android:id="@+id/wGainButton"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             android:layout_above="@+id/lowText"
             android:layout_toRightOf="@+id/view2"
             android:allowUndo="false" />
@@ -68,7 +70,7 @@
             android:id="@+id/lowText"
             android:textColor="#ffffff"
             android:layout_marginTop="20dp"
-            android:layout_gravity="left|center_vertical"
+            android:layout_alignStart="@+id/wlossButton"
             android:layout_below="@+id/maintainButton"
             android:textSize="20dp"
             android:textIsSelectable="true" />
@@ -80,8 +82,9 @@
             android:text=""
             android:id="@+id/lowCalories"
             android:layout_below="@+id/lowText"
-            android:textColor="#e89633"
-            android:layout_alignParentStart="true" />
+            android:layout_alignStart="@+id/wlossButton"
+            android:textColor="#e70b0e"
+             />
 
         <TextView
             android:layout_width="wrap_content"
@@ -99,7 +102,7 @@
             android:text="Moderate Physical Activity:"
             android:id="@+id/modText"
             android:textColor="#ffffff"
-            android:layout_gravity="left|center_vertical"
+            android:layout_alignStart="@+id/wlossButton"
             android:layout_below="@+id/lowMessage"
             android:layout_marginTop="20dp"
             android:textSize="20dp"
@@ -111,9 +114,10 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text=""
             android:id="@+id/modCalories"
+            android:layout_alignStart="@+id/wlossButton"
             android:layout_below="@+id/modText"
-            android:textColor="#e89633"
-            android:layout_alignParentStart="true" />
+            android:textColor="#e70b0e"
+             />
 
         <TextView
             android:layout_width="wrap_content"
@@ -132,7 +136,7 @@
             android:text="High Physical Activity:"
             android:id="@+id/highText"
             android:textColor="#ffffff"
-            android:layout_gravity="left|center_vertical"
+            android:layout_alignStart="@+id/wlossButton"
             android:layout_below="@+id/modMessage"
             android:layout_marginTop="20dp"
             android:textSize="20dp"
@@ -145,8 +149,8 @@
             android:text=""
             android:id="@+id/highCalories"
             android:layout_below="@+id/highText"
-            android:textColor="#e89633"
-            android:layout_alignParentStart="true"
+            android:textColor="#e70b0e"
+            android:layout_alignStart="@+id/wlossButton"
             android:singleLine="true" />
 
         <TextView
