--- a/app/src/main/res/layout/fragment_profile__page.xml
+++ b/app/src/main/res/layout/fragment_profile__page.xml
@@ -41,8 +41,8 @@
                 android:id="@+id/pic"
                 android:background="#e70b0e"
 
-                android:layout_alignBottom="@+id/name"
-                android:layout_alignParentEnd="true" />
+                android:layout_below="@+id/profilepicview"
+                android:layout_alignEnd="@+id/obeseBmi" />
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
