Fixed howTo button functionality and font color

--- a/app/src/main/res/layout/fragment_body_building_day_four.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_four.xml
@@ -132,6 +132,8 @@
         android:layout_below = "@+id/dumbbellRowDetail"
         android:background="#e70b0e"
         android:layout_gravity="right|bottom"
+        android:textColor="#ffffff"
+
         />
 
 
