--- a/app/src/main/res/layout/fragment_fp__str__training.xml
+++ b/app/src/main/res/layout/fragment_fp__str__training.xml
@@ -16,7 +16,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="25dp"
         android:layout_gravity="center"
-        android:background="#e89633" />
+        android:background="#e89633"
+        android:textColor="#ffffff"
+        />
 
     <Button
         android:layout_width="300dp"
@@ -26,7 +28,9 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="125dp"
         android:layout_gravity="center"
-        android:background="#e8d839" />
+        android:background="#e8d839"
+        android:textColor="#ffffff"
+        />
 
     <Button
         android:layout_width="300dp"
@@ -38,7 +42,9 @@
         android:layout_marginBottom="75dp"
         android:layout_gravity="center"
         android:height="@dimen/activity_vertical_margin"
-        android:background="#e8b63a" />
+        android:background="#e8b63a"
+        android:textColor="#ffffff"
+        />
 
     <Button
         android:layout_width="300dp"
@@ -49,7 +55,9 @@
         android:layout_alignStart="@+id/day4Strength"
         android:layout_marginBottom="-75dp"
         android:layout_gravity="center"
-        android:background="#e8260e" />
+        android:background="#e8260e"
+        android:textColor="#ffffff"
+        />
 
     <Button
         android:layout_width="300dp"
@@ -60,7 +68,9 @@
         android:layout_alignStart="@+id/day3Strength"
         android:layout_marginBottom="-25dp"
         android:layout_gravity="center"
-        android:background="#e86f14" />
+        android:background="#e86f14"
+        android:textColor="#ffffff"
+        />
 
 
     <Button
@@ -69,6 +79,8 @@
         android:text="How To"
         android:id="@+id/howTo"
         android:layout_gravity="center_horizontal|bottom"
-        android:background="#e70b0e" />
+        android:background="#e70b0e"
+        android:textColor="#ffffff"
+        />
 
 </FrameLayout>
