--- a/app/src/main/res/layout/fragment_goal.xml
+++ b/app/src/main/res/layout/fragment_goal.xml
@@ -41,6 +41,7 @@
             android:text="Set Weight"
             android:id="@+id/setWeight"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             android:layout_below="@+id/editnametext"
             android:layout_alignStart="@+id/setWeightG"
             android:layout_marginBottom="10dp"
@@ -77,6 +78,7 @@
             android:text="Set Weight"
             android:id="@+id/setWeightG"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             android:layout_below="@+id/currentWeightGainGoal"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="10dp"
@@ -113,6 +115,7 @@
             android:text="Set Bench"
             android:id="@+id/setBench"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             android:layout_below="@+id/BenchText"
             android:layout_alignStart="@+id/setWeightG"
             android:layout_marginBottom="10dp"
@@ -149,6 +152,7 @@
             android:text="Set Squat"
             android:id="@+id/setSquat"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             android:layout_below="@+id/currentSquatGoal"
             android:layout_alignStart="@+id/setBench"
             android:layout_marginBottom="10dp"
@@ -186,6 +190,7 @@
             android:text="Set DeadLift"
             android:id="@+id/setDeadLift"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             android:layout_centerVertical="true"
             android:layout_below="@+id/DeadLiftText"
 
@@ -224,6 +229,7 @@
             android:text="Set MileTime"
             android:id="@+id/setMileTime"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             android:layout_below="@+id/MileTimeText"
             android:layout_alignStart="@+id/setDeadLift"
             android:layout_marginBottom="10dp"
