--- a/app/src/main/res/layout/fragment_strength_day_five.xml
+++ b/app/src/main/res/layout/fragment_strength_day_five.xml
@@ -139,6 +139,7 @@
             android:layout_below = "@+id/legPressDescrpition"
             android:layout_gravity="right|bottom"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             />
 
 
