--- a/app/src/main/res/layout/fragment_strength_day_one.xml
+++ b/app/src/main/res/layout/fragment_strength_day_one.xml
@@ -129,6 +129,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_alignParentStart="false"
                 android:background="#e70b0e"
+                android:textColor="#ffffff"
                 />
 
 
