--- a/app/src/main/res/layout/fragment_strength_day_three.xml
+++ b/app/src/main/res/layout/fragment_strength_day_three.xml
@@ -122,6 +122,7 @@
             android:layout_below = "@+id/shrugDescription"
             android:layout_gravity="right|bottom"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             />
 
 
