--- a/app/src/main/res/layout/fragment_weightloss_day_four.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_four.xml
@@ -118,6 +118,7 @@
                 android:layout_below = "@+id/cardioDetail"
                 android:layout_gravity="right|bottom"
                 android:background="#e70b0e"
+                android:textColor="#ffffff"
                 />
 
 
