--- a/app/src/main/res/layout/fragment_weightloss_day_one.xml
+++ b/app/src/main/res/layout/fragment_weightloss_day_one.xml
@@ -120,6 +120,7 @@
             android:layout_below = "@+id/jumpropeDetail"
             android:layout_gravity="right|bottom"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             />
 
 
