--- a/app/src/main/res/layout/fragment_body_building_day_five.xml
+++ b/app/src/main/res/layout/fragment_body_building_day_five.xml
@@ -134,6 +134,7 @@
             android:layout_below = "@+id/shoulderPressDetail"
             android:layout_gravity="right|bottom"
             android:background="#e70b0e"
+            android:textColor="#ffffff"
             />
 
 
