--- a/app/src/main/res/layout/fragment_fp__body__building.xml
+++ b/app/src/main/res/layout/fragment_fp__body__building.xml
@@ -74,7 +74,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="How To"
-        android:id="@+id/howTo"
+        android:id="@+id/howTO"
         android:layout_gravity="center_horizontal|bottom"
         android:background="#e70b0e"
         android:textColor="#ffffff"
