--- a/app/src/main/res/layout/fragment_weightloss_howto.xml
+++ b/app/src/main/res/layout/fragment_weightloss_howto.xml
@@ -23,17 +23,7 @@
             android:textAppearance="?android:attr/textAppearanceLarge"
             android:text="
 
-          This fabulous workout is based
-          off the masterful weightloss
-          plans from the man the myth the
-          legend.. Richard Simmons.
-          Mr. Simmons has some of the
-          most unique easy to do
-          weightloss routines that will trim
-          down even the largest of the guts.
-          He is truly a man who knows his
-          weightloss programs and who
-          also has an amazing haircut!
+          This fabulous workout is based off the masterful weightloss plans from the man the myth the legend.. Richard Simmons. Mr. Simmons has some of the most unique easy to do weightloss routines that will trim down even the largest of the guts. He is truly a man who knows his weightloss programs and who also has an amazing haircut!
 
 
 
